--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 *.o
-
+build/**
 d2q9-bgk
-d2q9-bgk.out
+d2q9-bgk.*
 final_state.dat
 av_vels.dat
 final_state.png
+final_state.plt
+gmon.out
+initial_state.dat
